--- a/style_global.css
+++ b/style_global.css
@@ -22,9 +22,9 @@ body {
   justify-content: center;
   align-items: center;
   background: radial-gradient(
-    ellipse at center,
+    circle at left bottom,
     hsl(200, 0%, 10%),
-    hsl(200, 0%, 0%)
+    hsl(200, 0%, 30%)
   );
   z-index: 99;
   width: 100vw;
