--- a/style_gallery.css
+++ b/style_gallery.css
@@ -28,11 +28,6 @@
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 1);
   max-width: 100%;
   height: auto;
-  transition: all 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955);
-}
-
-.image-grid img:hover {
-  transform: scale(1.1);
 }
 
 .bottom {
@@ -53,15 +48,10 @@
   background: hsla(200, 0%, 10%, 0.65);
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 1);
   cursor: pointer;
-  transition: all 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955);
+  z-index: 2;
 }
 
 .back-to-home img {
   width: 100px;
   height: auto;
-}
-
-.back-to-home:hover {
-  transform: scale(1.25);
-  box-shadow: 0px 0px 24px rgba(0, 0, 0, 1);
 }
