--- a/style_gallery.css
+++ b/style_gallery.css
@@ -6,7 +6,7 @@
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.8);
   font-family: "Montserrat", sans-serif;
-  overflow-y: visible;
+  overflow-y: scroll;
   overflow-x: hidden;
   user-select: none;
   z-index: 1;
