--- a/style_index.css
+++ b/style_index.css
@@ -27,11 +27,7 @@
   border-radius: 25px;
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 1);
   text-align: center;
-  background: radial-gradient(
-    circle at left bottom,
-    hsla(200, 0%, 10%, 0.5),
-    hsla(200, 0%, 10%, 1)
-  );
+  background: hsl(200, 0%, 10%);
 }
 
 .title .ico {
@@ -112,11 +108,21 @@
   bottom: 0%;
   left: 0%;
   right: auto;
-  background-color: hsla(200, 0%, 10%, 0.65);
-  opacity: 0.7;
+  opacity: 0.35;
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 1);
 }
 
+.btn-shadow.blue {
+  background-color: #8ce197;
+}
+
+.btn-shadow.yellow {
+  background-color: #92e9ff;
+}
+
+.btn-shadow.red {
+  background-color: #ffff7a;
+}
 .tool-bar {
   display: flex;
   position: absolute;
