--- a/style_fullscreen.css
+++ b/style_fullscreen.css
@@ -13,6 +13,7 @@
 
 .fullscreen-image-container {
   display: flex;
+  position: absolute;
   justify-content: center;
   align-items: center;
   top: 0;
