--- a/style_fullscreen.css
+++ b/style_fullscreen.css
@@ -62,3 +62,25 @@
   width: 85px;
   height: auto;
 }
+
+.text-container {
+  display: flex;
+  position: absolute;
+  bottom: 10px;
+  align-items: center;
+  font-size: 36px;
+  color: #ffffff;
+  z-index: 4;
+}
+
+.text-container p {
+  padding: 0;
+  margin: 0;
+}
+
+.text-container div {
+  border-radius: 10px;
+  background: hsla(200, 0%, 10%, 0.65);
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 1);
+  padding: 5px;
+}
