--- a/style_fullscreen.css
+++ b/style_fullscreen.css
@@ -75,10 +75,11 @@
 
 .text-container p {
   padding: 0;
-  margin: 0;
+  margin: 5px;
 }
 
 .text-container div {
+  cursor: pointer;
   border-radius: 10px;
   background: hsla(200, 0%, 10%, 0.65);
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 1);
