--- a/style_gallery.css
+++ b/style_gallery.css
@@ -5,7 +5,6 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.8);
-  font-family: "Montserrat", sans-serif;
   overflow-y: scroll;
   overflow-x: hidden;
   user-select: none;
@@ -36,6 +35,7 @@
 
 .back-to-home,
 .top-btn {
+  display: flex;
   position: fixed;
   bottom: 45px;
   padding: 5px;
