--- a/style_global.css
+++ b/style_global.css
@@ -1,15 +1,26 @@
 /* 全局 */
 body {
   background-color: hsl(210, 15%, 7.5%);
-  margin: 0;
-  padding: 0;
-  font-family: "Montserrat", sans-serif;
-  color: #ffffff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   user-select: none;
   overflow: hidden;
+}
+
+/* 預設字體 */
+body {
+  font-family: "Montserrat", sans-serif;
+  font-size: 24px;
+  color: #ffffff;
+}
+:lang(zh-Hant) {
+  font-family: "Noto Sans TC", sans-serif;
+}
+:lang(ja) {
+  font-family: "Noto Sans JP", sans-serif;
+}
+input {
+  font-family: inherit;
+  font-size: inherit;
+  color: inherit;
 }
 
 /* 載入畫面 */
