--- a/style_fullscreen.css
+++ b/style_fullscreen.css
@@ -80,7 +80,7 @@
 .text-container div {
   cursor: pointer;
   border-radius: 10px;
-  background: hsla(200, 0%, 10%, 0.65);
+  background-color: hsla(200, 0%, 10%, 0.65);
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 1);
   padding: 5px;
 }
