--- a/style_gallery.css
+++ b/style_gallery.css
@@ -40,7 +40,7 @@
   bottom: 45px;
   padding: 5px;
   border-radius: 10px;
-  background: hsla(200, 0%, 10%, 0.65);
+  background-color: hsla(200, 0%, 10%, 0.65);
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 1);
   cursor: pointer;
   z-index: 2;
