--- a/style_index.css
+++ b/style_index.css
@@ -27,7 +27,7 @@
   border-radius: 25px;
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 1);
   text-align: center;
-  background: hsl(200, 0%, 10%);
+  background-color: hsl(200, 0%, 10%);
 }
 
 .title .ico {
@@ -336,7 +336,7 @@
 .options-language div {
   cursor: pointer;
   border-radius: 10px;
-  background: hsla(200, 0%, 10%, 0.65);
+  background-color: hsla(200, 0%, 10%, 0.65);
   box-shadow: 0px 0px 3px rgba(0, 0, 0, 1);
   padding: 5px;
 }
