分離預先載入工作至新檔案、使網頁初始化前就先顯示正確載入畫面

--- a/css/style_global.css
+++ b/css/style_global.css
@@ -34,6 +34,7 @@ input {
   justify-content: center;
   align-items: center;
   z-index: 99;
+  background-color: hsl(200, 0%, 10%);
 }
 
 .loading {
