--- a/css/content.css
+++ b/css/content.css
@@ -10,3 +10,69 @@
   grid-column-gap: 30px;
   grid-row-gap: 30px;
 }
+
+/* createBulb */
+.bulb-container,
+.bulb {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.bulb {
+  background-color: #00000000;
+  box-shadow: 0px 0px 20px #00000000;
+  border-radius: 50%;
+}
+.bulb-filter {
+  background: radial-gradient(
+    circle at 5px 5px,
+    hsla(240, 0%, 0%, 0),
+    hsla(240, 0%, 0%, 0.35),
+    hsla(240, 0%, 0%, 0.9)
+  );
+  filter: blur(0.5px);
+  border-radius: 50%;
+}
+
+/* createFolderbox */
+.folder-box {
+  box-sizing: border-box;
+  width: 100%;
+  height: 50px;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 1);
+  z-index: 1;
+  cursor: pointer;
+}
+.folder-box-label {
+  width: calc(100% - 100px);
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  color: white;
+  pointer-events: none;
+}
+
+/* createFolderBoxContainer */
+.folder-box-container {
+  position: relative;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  user-select: none;
+}
+.folder-box-img {
+  position: absolute;
+  height: 100%;
+  border-radius: 10px;
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 1);
+  object-fit: cover;
+  background-color: darkolivegreen;
+}
