--- a/css/global.css
+++ b/css/global.css
@@ -32,11 +32,15 @@ button {
 }
 
 input {
-  box-shadow: inset 0px 0px 12px rgba(0, 0, 0, 0.5);
+  box-shadow: inset 3px 5px 0px 0px rgba(100, 100, 100, 0.35),
+    inset 4px 7px 16px 5px rgba(0, 0, 0, 0.5);
   padding: 5px;
 }
 
 button {
-  box-shadow: 0px 0px 12px rgba(0, 0, 0, 1);
+  box-shadow: rgba(0, 0, 0, 0.75) 0px 3px 4px,
+    rgba(0, 0, 0, 0.35) 10px 12px 3px -3px,
+    rgba(0, 0, 0, 0.45) 0px -5px 0px inset,
+    rgba(255, 255, 255, 0.1) 2px 5px 10px -3px inset;
   cursor: pointer;
 }
