--- a/css/header.css
+++ b/css/header.css
@@ -8,7 +8,10 @@
   justify-content: center;
   align-items: center;
   border-radius: 0 0 10px 10px;
-  box-shadow: 0px 0px 12px rgba(0, 0, 0, 1);
+  box-shadow: rgba(0, 0, 0, 0.75) 0px 3px 4px,
+    rgba(0, 0, 0, 0.35) 10px 12px 3px -3px,
+    rgba(0, 0, 0, 0.45) 0px -5px 0px inset,
+    rgba(255, 255, 255, 0.1) 2px 5px 10px -3px inset;
   z-index: 10;
 }
 
