--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -11,7 +11,10 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 0px 0px 12px rgba(0, 0, 0, 1);
+  box-shadow: rgba(0, 0, 0, 0.75) 0px 3px 4px,
+    rgba(0, 0, 0, 0.35) 10px 12px 3px -3px,
+    rgba(0, 0, 0, 0.45) 0px -5px 0px inset,
+    rgba(255, 255, 255, 0.1) 2px 5px 10px -3px inset;
   z-index: 5;
 }
 
@@ -27,7 +30,10 @@
   height: 50px;
   padding: 10px 0;
   border-radius: 0 10px 0 0;
-  box-shadow: 0px 0px 12px rgba(0, 0, 0, 1);
+  box-shadow: rgba(0, 0, 0, 0.75) 0px 3px 4px,
+    rgba(0, 0, 0, 0.35) 10px 12px 3px -3px,
+    rgba(0, 0, 0, 0.45) 0px -5px 0px inset,
+    rgba(255, 255, 255, 0.1) 2px 5px 10px -3px inset;
   z-index: 6;
 }
 
