--- a/css/global.css
+++ b/css/global.css
@@ -59,9 +59,16 @@ button {
   height: auto;
 }
 
-progress {
+#progress-bar {
   position: fixed;
-  bottom: -15px;
-  width: calc(100% + 10px);
-  height: 30px;
+  bottom: 0;
+  left: 0;
+  width: 0px;
+  height: 15px;
+  border-radius: 10px;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.75) 0px 3px 4px,
+    rgba(0, 0, 0, 0.35) 10px 12px 3px -3px,
+    rgba(0, 0, 0, 0.45) 0px -5px 0px inset,
+    rgba(255, 255, 255, 0.1) 2px 5px 10px -3px inset;
 }
