--- a/css/content.css
+++ b/css/content.css
@@ -5,6 +5,7 @@
   right: 0;
   bottom: 0;
   display: flex;
+  overflow-y: scroll;
 }
 
 /* createBulb */
@@ -88,4 +89,64 @@
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 1);
   object-fit: cover;
   background-color: darkolivegreen;
+}
+
+/* Gallery */
+.images-container {
+  position: absolute;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 25px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto;
+  grid-column-gap: 25px;
+  grid-row-gap: 25px;
+}
+
+.image-container {
+  position: relative;
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform-style: preserve-3d;
+}
+
+.image-container img {
+  position: relative;
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+  cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.75) 0px 3px 4px,
+    rgba(0, 0, 0, 0.35) 10px 12px 3px -3px,
+    rgba(0, 0, 0, 0.45) 0px -5px 0px inset,
+    rgba(255, 255, 255, 0.1) 2px 5px 10px -3px inset;
+}
+
+.reflex-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  pointer-events: none;
+  transform: translateZ(-30px);
+}
+
+.reflex-plane {
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.15);
+  background: radial-gradient(
+    circle at center,
+    rgba(255, 255, 255, 0),
+    rgba(255, 255, 255, 0),
+    rgba(255, 255, 255, 0.15),
+    rgba(255, 255, 255, 0.3)
+  );
+  border-radius: 10px;
 }
