--- a/css/content.css
+++ b/css/content.css
@@ -5,8 +5,7 @@
   right: 0;
   bottom: 0;
   display: flex;
-  overflow-x: hidden;
-  overflow-y: scroll;
+  overflow: hidden;
 }
 
 /* createBulb */
@@ -93,7 +92,15 @@
 }
 
 /* Gallery */
-.images-container {
+.gallery {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+
+.images-grid {
   position: absolute;
   width: 100%;
   box-sizing: border-box;
