--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -115,6 +115,7 @@
   box-sizing: border-box;
   padding: 5px;
   clip-path: inset(0);
+  pointer-events: none;
 }
 .folder-button-label {
   position: relative;
