--- a/css/sidebar/settingSelect.css
+++ b/css/sidebar/settingSelect.css
@@ -10,6 +10,16 @@
   justify-content: center;
   align-items: center;
 }
+.setting-icon-container,
+.setting-icon-container > img {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  pointer-events: none;
+}
 
 /* createSettingSelect */
 .setting-select {
