--- a/css/sidebar/sidebar.css
+++ b/css/sidebar/sidebar.css
@@ -3,6 +3,7 @@
 @import url("sortSelect.css");
 @import url("settingSelect.css");
 @import url("previewMenu.css");
+@import url("lightBox.css");
 
 /* sideBar */
 #sidebar {
