--- a/css/content/previewImage.css
+++ b/css/content/previewImage.css
@@ -18,3 +18,11 @@
     rgba(0, 0, 0, 0.45) 0px -5px 0px inset,
     rgba(255, 255, 255, 0.1) 2px 5px 10px -3px inset;
 }
+.close-button {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
