--- a/css/content/previewImage.css
+++ b/css/content/previewImage.css
@@ -7,7 +7,7 @@
   justify-content: center;
   align-items: center;
 }
-.preview-container img {
+.preview-container > img {
   position: relative;
   max-width: calc(100% - 60px);
   max-height: calc(100% - 60px);
@@ -25,4 +25,20 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.close-icon-container {
+  position: relative;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.close-icon-container > img {
+  position: absolute;
+  width: 30px;
+  height: 30px;
 }
