--- a/css/content/previewImage.css
+++ b/css/content/previewImage.css
@@ -19,7 +19,7 @@
     rgba(255, 255, 255, 0.1) 2px 5px 10px -3px inset;
 }
 .close-button {
-  position: absolute;
+  position: fixed;
   top: 20px;
   right: 20px;
   width: 40px;
