--- a/css/header/header.css
+++ b/css/header/header.css
@@ -26,6 +26,8 @@
   left: 20px;
   width: 80px;
   height: auto;
+  filter: drop-shadow(3px 3px 1px rgba(0, 0, 0, 0.5))
+    drop-shadow(6px 6px 1px rgba(0, 0, 0, 0.35));
 }
 
 #header h1 {
@@ -34,6 +36,7 @@
   display: flex;
   justify-content: center;
   font-size: 40px;
+  text-shadow: 3px 3px 1px rgba(0, 0, 0, 0.5), 6px 6px 1px rgba(0, 0, 0, 0.35);
 }
 
 /* headerBulb */
