製作上下張功能

--- a/css/sidebar/lightBox.css
+++ b/css/sidebar/lightBox.css
@@ -37,6 +37,7 @@
   height: calc((100% - 220px) / 5);
   max-height: calc((9 / 16) * 180px);
   margin: 10px;
+  position: relative;
 }
 .light-boxes-container .image-container {
   position: relative;
