--- a/css/color.css
+++ b/css/color.css
@@ -1,35 +1,36 @@
 body {
-  background-color: hsl(210, 15%, 15%);
+  background-color: hsl(210, 15%, 30%);
 }
 
 ::-webkit-scrollbar-track {
-  background-color: hsl(210, 15%, 15%);
+  background-color: transparent;
 }
 ::-webkit-scrollbar-thumb {
-  background: hsl(210, 0%, 35%);
+  background: hsl(225, 10%, 15%);
 }
 ::-webkit-scrollbar-thumb:hover {
-  background: hsl(210, 0%, 60%);
+  background: hsl(225, 10%, 10%);
 }
 
-button,
 .pop-up {
   background-color: hsl(240, 5%, 10%);
 }
 
 #header,
-#version-display {
-  background-color: hsl(240, 5%, 10%);
-}
-
 #sidebar {
   background-color: hsl(225, 7.5%, 5%);
 }
 
+button,
+#version-display {
+  background-color: hsl(240, 5%, 15%);
+}
+
 .folder-box {
-  background-color: hsl(225, 10%, 23%);
+  background-color: hsla(210, 0%, 10%, 0.7);
+  backdrop-filter: blur(10px);
 }
 
 input {
-  background-color: hsl(210, 0%, 25%);
+  background-color: hsl(210, 0%, 30%);
 }
