--- a/css/global.css
+++ b/css/global.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap");
+
 body {
   margin: 0;
   font-family: "Noto Sans TC", sans-serif;
@@ -43,6 +45,9 @@ button {
 }
 img {
   user-select: none;
+}
+:lang(en) {
+  font-family: "Comfortaa", sans-serif;
 }
 
 /* createVerticalSeparator */
