--- a/css/sidebar/sidebar.css
+++ b/css/sidebar/sidebar.css
@@ -1,7 +1,7 @@
 /* 在sideBar的components */
-@import url("folderSelect.css");
-@import url("sortSelect.css");
-@import url("settingSelect.css");
+@import url("sidebar-title.css");
+@import url("sidebar-mainBtn.css");
+@import url("sidebar-version.css");
 @import url("previewMenu.css");
 @import url("lightBox.css");
 
@@ -13,44 +13,11 @@
   bottom: 0;
   width: 240px;
   padding: 10px;
-  padding-top: 115px;
-  padding-bottom: 65px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  box-shadow: rgba(0, 0, 0, 0.75) 0px 3px 4px,
-    rgba(0, 0, 0, 0.35) 10px 12px 3px -3px,
-    rgba(0, 0, 0, 0.45) 0px -5px 0px inset,
-    rgba(255, 255, 255, 0.1) 2px 5px 10px -3px inset;
+  padding-top: 30px;
+  box-shadow: rgba(0, 0, 0, 0.7) 1px 1px 2px 0px,
+    rgba(0, 0, 0, 0.5) 3px 1px 3px 1px;
   z-index: 5;
 
   /* opening */
   translate: -300px 0px;
-}
-
-#version-display {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  box-sizing: border-box;
-  width: 265px;
-  height: 50px;
-  padding: 10px 0;
-  border-radius: 0 10px 0 0;
-  box-shadow: rgba(0, 0, 0, 0.75) 0px 3px 4px,
-    rgba(0, 0, 0, 0.35) 10px 12px 3px -3px,
-    rgba(0, 0, 0, 0.45) 0px -5px 0px inset,
-    rgba(255, 255, 255, 0.1) 2px 5px 10px -3px inset;
-  z-index: 6;
-
-  /* opening */
-  translate: 0px 60px;
-}
-
-#version-display > p {
-  margin: 0;
 }
