--- a/css/content/content.css
+++ b/css/content/content.css
@@ -1,10 +1,10 @@
-@import url("folderBoxes.css");
+@import url("content-intro.css");
 @import url("gallery.css");
 @import url("previewImage.css");
 
 #content {
   position: fixed;
-  top: 100px;
+  top: 0;
   left: 260px;
   right: 0;
   bottom: 0;
