--- a/css/color.css
+++ b/css/color.css
@@ -12,10 +12,6 @@ body {
   background: hsl(225, 10%, 10%);
 }
 
-.pop-up {
-  background-color: hsl(240, 5%, 10%);
-}
-
 #header,
 #sidebar {
   background-color: hsl(225, 7.5%, 5%);
@@ -26,11 +22,6 @@ button,
   background-color: hsl(240, 5%, 15%);
 }
 
-.folder-box {
-  background-color: hsla(210, 0%, 10%, 0.7);
-  backdrop-filter: blur(10px);
-}
-
-input {
-  background-color: hsl(210, 0%, 30%);
+.popup {
+  background-color: hsl(240, 5%, 10%);
 }
