--- a/css/global.css
+++ b/css/global.css
@@ -4,10 +4,11 @@ body {
   margin: 0;
   font-family: "Noto Sans TC", sans-serif;
   color: white;
-  overflow-y: hidden;
-  overflow-x: hidden;
-  width: 100vw;
-  height: 100vh;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -30,11 +31,6 @@ button {
   border-width: 0;
   outline: 0;
   font-size: 20px;
-}
-input {
-  box-shadow: inset 3px 5px 0px 0px rgba(100, 100, 100, 0.35),
-    inset 4px 7px 16px 5px rgba(0, 0, 0, 0.5);
-  padding: 5px;
 }
 button {
   box-shadow: rgba(0, 0, 0, 0.75) 0px 3px 4px,
@@ -72,65 +68,17 @@ img {
 
 /* loadingScreen */
 #loading-container {
-  position: absolute;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
   z-index: 15;
-}
-#loading-container > img {
-  width: 150px;
-  height: auto;
-}
-#progress-bar {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 0px;
-  height: 15px;
-  border-radius: 10px;
-  background-color: white;
-  box-shadow: rgba(0, 0, 0, 0.75) 0px 3px 4px,
-    rgba(0, 0, 0, 0.35) 10px 12px 3px -3px,
-    rgba(0, 0, 0, 0.45) 0px -5px 0px inset,
-    rgba(255, 255, 255, 0.1) 2px 5px 10px -3px inset;
-  transition: width 0.5s cubic-bezier(0.45, 0.05, 0.55, 0.95);
-}
-
-/* createToggleButton */
-.toggler-container {
-  position: relative;
-  width: 60px;
-  height: 35px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 35px;
-  clip-path: inset(0);
-  cursor: pointer;
-}
-.toggler-inner {
-  width: 100%;
-  height: 100%;
-  border-radius: 35px;
-  background-color: hsl(210, 0%, 25%);
-  box-shadow: inset 3px 5px 0px 0px rgba(100, 100, 100, 0.35),
-    inset 4px 7px 16px 5px rgba(0, 0, 0, 0.5);
   pointer-events: none;
-}
-.toggler-dot {
-  position: absolute;
-  left: 5px;
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  background-color: #ea81af;
-  box-shadow: rgba(0, 0, 0, 0.75) 0px 3px 4px,
-    rgba(0, 0, 0, 0.35) 10px 12px 3px -3px,
-    rgba(0, 0, 0, 0.45) 0px -3px 0px inset,
-    rgba(255, 255, 255, 0.1) 2px 5px 10px -3px inset;
-  pointer-events: none;
+  transition: all 0.3s;
 }
 
 /* createBulb */
