--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,4 @@
 @import url("sidebar/sidebar.css");
 @import url("content/content.css");
 @import url("aside/aside.css");
+@import url("popup/popup.css");
