--- a/css/content/content.css
+++ b/css/content/content.css
@@ -1,5 +1,5 @@
 @import url("content-intro.css");
-@import url("gallery.css");
+@import url("content-gallery.css");
 @import url("previewImage.css");
 
 #content {
