--- a/css/content/content-gallery.css
+++ b/css/content/content-gallery.css
@@ -10,12 +10,12 @@
   position: absolute;
   width: 100%;
   box-sizing: border-box;
-  padding: 25px;
+  padding: 60px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: auto;
-  grid-column-gap: 25px;
-  grid-row-gap: 25px;
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
 }
 .image-container {
   position: relative;
@@ -30,12 +30,15 @@
   position: relative;
   width: 100%;
   height: auto;
-  border-radius: 10px;
+  border-radius: 5px;
   cursor: pointer;
   box-shadow: rgba(0, 0, 0, 0.75) 0px 3px 4px,
     rgba(0, 0, 0, 0.35) 10px 12px 3px -3px,
     rgba(0, 0, 0, 0.45) 0px -5px 0px inset,
     rgba(255, 255, 255, 0.1) 2px 5px 10px -3px inset;
+  box-shadow: rgba(0, 0, 0, 0.75) 0px 3px 4px,
+    rgba(0, 0, 0, 0.35) 5px 8px 3px -3px, rgba(0, 0, 0, 0.45) 0px -2px 0px inset,
+    rgba(255, 255, 255, 0.3) 2px 5px 3px -3px inset;
 }
 .reflex-container {
   position: absolute;
@@ -57,5 +60,112 @@
     rgba(255, 255, 255, 0.15),
     rgba(255, 255, 255, 0.3)
   );
-  border-radius: 10px;
+  border-radius: 5px;
+}
+
+/*  */
+
+.gallery-close-button {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: sticky;
+  top: 15px;
+  left: 30px;
+  width: auto;
+  height: calc(56px * 0.85);
+  border-radius: 60px;
+  box-shadow: rgba(0, 0, 0, 0.75) 0px 3px 4px,
+    rgba(0, 0, 0, 0.35) 5px 8px 3px -3px, rgba(0, 0, 0, 0.45) 0px -2px 0px inset,
+    rgba(255, 255, 255, 0.3) 2px 5px 3px -3px inset;
+  background-color: hsl(225, 7.5%, 5%);
+  transition: background-color 0.2s ease-in-out,
+    scale 0.1s cubic-bezier(0.645, 0.045, 0.355, 1);
+  scale: 0.95;
+}
+.gallery-close-button:active {
+  scale: 0.85;
+}
+.gallery-close-button::after {
+  content: "返回";
+  margin-right: 10px;
+  transition: all 0.2s ease-in-out;
+}
+.gallery-close-button:hover {
+  background-color: #ea81af;
+}
+.gallery-close-button:hover::after {
+  color: rgb(10, 10, 10);
+  font-weight: bold;
+}
+.gallery-close-button > * {
+  pointer-events: none;
+}
+
+.gallery .close-button-icon {
+  position: relative;
+  width: 56px;
+  height: 56px;
+  overflow: hidden;
+  outline: none;
+  background-color: transparent;
+  scale: 0.85;
+  transition: opacity 0.4s cubic-bezier(0.77, 0, 0.175, 1) 80ms,
+    transform 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) 80ms;
+}
+.gallery .close-button-icon:before,
+.gallery .close-button-icon:after {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+  inset: 7px;
+}
+.gallery .close-button-icon:before {
+  border: 4px solid white;
+  transition: opacity 0.4s cubic-bezier(0.77, 0, 0.175, 1) 80ms,
+    transform 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) 80ms;
+}
+.gallery .close-button-icon:after {
+  border: 4px solid rgb(10, 10, 10);
+  transform: scale(1.3);
+  transition: opacity 0.4s cubic-bezier(0.165, 0.84, 0.44, 1),
+    transform 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  opacity: 0;
+}
+.gallery-close-button:hover .close-button-icon:before,
+.gallery-close-button:focus .close-button-icon:before {
+  opacity: 0;
+  transform: scale(0.7);
+  transition: opacity 0.4s cubic-bezier(0.165, 0.84, 0.44, 1),
+    transform 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+.gallery-close-button:hover .close-button-icon:after,
+.gallery-close-button:focus .close-button-icon:after {
+  opacity: 1;
+  transform: scale(1);
+  transition: opacity 0.4s cubic-bezier(0.77, 0, 0.175, 1) 80ms,
+    transform 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) 80ms;
+}
+.gallery .close-button-box {
+  display: flex;
+  position: absolute;
+  top: 5.5px;
+  left: 0;
+}
+.gallery .close-button-elem {
+  display: block;
+  width: 20px;
+  height: 20px;
+  margin: 17px 18px 0 18px;
+  transform: rotate(180deg);
+  fill: white;
+  transition: all 0.2s ease-in-out;
+}
+.gallery-close-button:hover .close-button-elem {
+  fill: rgb(10, 10, 10);
+}
+.gallery-close-button:hover .close-button-box,
+.gallery-close-button:focus .close-button-box {
+  transition: 0.4s;
+  transform: translateX(-56px);
 }
