--- a/css/content/content-gallery.css
+++ b/css/content/content-gallery.css
@@ -67,39 +67,61 @@
 
 .gallery-close-button {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   position: sticky;
   top: 15px;
   left: 30px;
-  width: auto;
-  height: calc(56px * 0.85);
-  border-radius: 60px;
-  box-shadow: rgba(0, 0, 0, 0.75) 0px 3px 4px,
-    rgba(0, 0, 0, 0.35) 5px 8px 3px -3px, rgba(0, 0, 0, 0.45) 0px -2px 0px inset,
-    rgba(255, 255, 255, 0.3) 2px 5px 3px -3px inset;
+  width: 55px;
+  height: 55px;
+  padding: 0;
+  border-radius: 50%;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 0px 2px,
+    rgba(0, 0, 0, 0.8) 0px 4px 6px -1px,
+    rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
   background-color: hsl(225, 7.5%, 5%);
   transition: background-color 0.2s ease-in-out,
     scale 0.1s cubic-bezier(0.645, 0.045, 0.355, 1);
-  scale: 0.95;
+  scale: 0.9;
 }
 .gallery-close-button:active {
-  scale: 0.85;
-}
-.gallery-close-button::after {
-  content: "返回";
-  margin-right: 10px;
-  transition: all 0.2s ease-in-out;
+  scale: 0.8;
 }
 .gallery-close-button:hover {
   background-color: #ea81af;
 }
-.gallery-close-button:hover::after {
-  color: rgb(10, 10, 10);
-  font-weight: bold;
-}
 .gallery-close-button > * {
   pointer-events: none;
+}
+
+.gallery-close-tip {
+  --tooltip-color: rgb(41, 41, 41);
+  position: absolute;
+  right: -60px;
+  background-color: var(--tooltip-color);
+  color: white;
+  border-radius: 5px;
+  font-size: 12px;
+  padding: 8px 12px;
+  font-weight: bold;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.105);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: all 0.5s;
+}
+.gallery-close-tip::before {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  transform: rotate(45deg);
+  content: "";
+  background-color: var(--tooltip-color);
+  left: -10%;
+}
+.gallery-close-button:hover .gallery-close-tip {
+  opacity: 1;
 }
 
 .gallery .close-button-icon {
