--- a/css/content/content-gallery.css
+++ b/css/content/content-gallery.css
@@ -69,20 +69,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: sticky;
-  top: 15px;
-  left: 30px;
-  width: 55px;
-  height: 55px;
+  position: relative;
   padding: 0;
+  margin: 0px 15px;
   border-radius: 50%;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 0px 2px,
     rgba(0, 0, 0, 0.8) 0px 4px 6px -1px,
     rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
-  background-color: hsl(225, 7.5%, 5%);
   transition: background-color 0.2s ease-in-out,
     scale 0.1s cubic-bezier(0.645, 0.045, 0.355, 1);
   scale: 0.9;
+  translate: 0px 2px;
 }
 .gallery-close-button:active {
   scale: 0.8;
@@ -97,7 +94,7 @@
 .gallery-close-tip {
   --tooltip-color: rgb(41, 41, 41);
   position: absolute;
-  right: -60px;
+  bottom: -65px;
   background-color: var(--tooltip-color);
   color: white;
   border-radius: 5px;
@@ -118,76 +115,27 @@
   transform: rotate(45deg);
   content: "";
   background-color: var(--tooltip-color);
-  left: -10%;
+  top: -10%;
 }
 .gallery-close-button:hover .gallery-close-tip {
   opacity: 1;
 }
 
-.gallery .close-button-icon {
+.gallery-close-button .close-button-icon {
   position: relative;
-  width: 56px;
-  height: 56px;
-  overflow: hidden;
+  width: 40px;
+  height: 40px;
   outline: none;
   background-color: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   scale: 0.85;
   transition: opacity 0.4s cubic-bezier(0.77, 0, 0.175, 1) 80ms,
     transform 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) 80ms;
 }
-.gallery .close-button-icon:before,
-.gallery .close-button-icon:after {
-  content: "";
+.close-button-icon img {
   position: absolute;
-  border-radius: 50%;
-  inset: 7px;
-}
-.gallery .close-button-icon:before {
-  border: 4px solid white;
-  transition: opacity 0.4s cubic-bezier(0.77, 0, 0.175, 1) 80ms,
-    transform 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) 80ms;
-}
-.gallery .close-button-icon:after {
-  border: 4px solid rgb(10, 10, 10);
-  transform: scale(1.3);
-  transition: opacity 0.4s cubic-bezier(0.165, 0.84, 0.44, 1),
-    transform 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  opacity: 0;
-}
-.gallery-close-button:hover .close-button-icon:before,
-.gallery-close-button:focus .close-button-icon:before {
-  opacity: 0;
-  transform: scale(0.7);
-  transition: opacity 0.4s cubic-bezier(0.165, 0.84, 0.44, 1),
-    transform 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-}
-.gallery-close-button:hover .close-button-icon:after,
-.gallery-close-button:focus .close-button-icon:after {
-  opacity: 1;
-  transform: scale(1);
-  transition: opacity 0.4s cubic-bezier(0.77, 0, 0.175, 1) 80ms,
-    transform 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) 80ms;
-}
-.gallery .close-button-box {
-  display: flex;
-  position: absolute;
-  top: 5.5px;
-  left: 0;
-}
-.gallery .close-button-elem {
-  display: block;
-  width: 20px;
-  height: 20px;
-  margin: 17px 18px 0 18px;
-  transform: rotate(180deg);
-  fill: white;
-  transition: all 0.2s ease-in-out;
-}
-.gallery-close-button:hover .close-button-elem {
-  fill: rgb(10, 10, 10);
-}
-.gallery-close-button:hover .close-button-box,
-.gallery-close-button:focus .close-button-box {
-  transition: 0.4s;
-  transform: translateX(-56px);
+  width: 40px;
+  height: 40px;
 }
