--- a/css/header/header.css
+++ b/css/header/header.css
@@ -7,7 +7,8 @@
   height: 50px;
   min-width: 120px;
   display: flex;
-  justify-content: flex-end;
+  flex-direction: row-reverse;
+  justify-content: space-between;
   align-items: center;
   border-radius: 40px;
   box-shadow: rgba(0, 0, 0, 0.75) 0px 3px 4px,
@@ -23,4 +24,26 @@
 #header > .bulb-container {
   position: relative;
   scale: 0.8;
+}
+.bulb-container,
+.bulb {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  pointer-events: none;
+}
+.bulb {
+  background-color: #00000000;
+  box-shadow: 0px 0px 20px #00000000;
+  border-radius: 50%;
+}
+.bulb-filter {
+  background: radial-gradient(
+    circle at 5px 5px,
+    hsla(240, 0%, 0%, 0),
+    hsla(240, 0%, 0%, 0.35),
+    hsla(240, 0%, 0%, 0.9)
+  );
+  filter: blur(0.5px);
+  border-radius: 50%;
 }
