--- a/css/global.css
+++ b/css/global.css
@@ -1,61 +1,71 @@
-@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap");
-
-body {
-  margin: 0;
-  font-family: "Noto Sans TC", sans-serif;
-  color: white;
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 20px;
-}
-
 /* scrollBar */
 ::-webkit-scrollbar {
   width: 10px;
 }
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
 ::-webkit-scrollbar-thumb {
   border-radius: 5px;
+  background: hsl(225, 10%, 15%);
+}
+::-webkit-scrollbar-thumb:hover {
+  background: hsl(225, 10%, 10%);
 }
 
+/* font */
+body,
 input,
 button {
   font-family: "Noto Sans TC", sans-serif;
   color: white;
-  border-radius: 10px;
-  border-width: 0;
-  outline: 0;
   font-size: 20px;
-}
-button {
-  box-shadow: rgba(0, 0, 0, 0.75) 0px 3px 4px,
-    rgba(0, 0, 0, 0.35) 10px 12px 3px -3px,
-    rgba(0, 0, 0, 0.45) 0px -5px 0px inset,
-    rgba(255, 255, 255, 0.1) 2px 5px 10px -3px inset;
-  cursor: pointer;
-}
-img {
-  user-select: none;
 }
 :lang(en) {
   font-family: "Comfortaa", sans-serif;
 }
 
-#mask-background {
+/* default setting */
+body {
   position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
+  margin: 0;
   display: flex;
-  justify-content: center;
   align-items: center;
-  z-index: 15;
-  pointer-events: none;
-  transition: all 0.3s;
+  justify-content: center;
+}
+input,
+button {
+  border-radius: 5px;
+  border-width: 0;
+  outline: 0;
+}
+button {
+  cursor: pointer;
+}
+img {
+  user-select: none;
+}
+
+/* color */
+body {
+  background-color: hsl(210, 15%, 30%);
+}
+#header,
+#sidebar {
+  background-color: hsl(225, 7.5%, 5%);
+}
+.popup {
+  background-color: hsl(240, 5%, 10%);
+}
+button,
+#version-display {
+  background-color: hsl(240, 5%, 15%);
+}
+.preview-header {
+  background-color: transparent;
+  backdrop-filter: blur(10px) brightness(0.5) hue-rotate(5deg);
 }
