--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,5 @@
-/* all_styles.css */
 @import url("global.css");
-@import url("color.css");
-@import url("header/header.css");
 @import url("sidebar/sidebar.css");
 @import url("content/content.css");
-@import url("aside/aside.css");
+@import url("other/other.css");
 @import url("popup/popup.css");
