--- a/css/content/content-preview.css
+++ b/css/content/content-preview.css
@@ -5,7 +5,8 @@
   left: 0;
   right: 0;
   z-index: 75;
-  --preview-border-radius: 15px;
+  --preview-border-radius: 5px;
+  transition: backdrop-filter 0.3s;
 }
 .preview-header {
   display: flex;
@@ -21,9 +22,10 @@
   border-radius: 0px 0px var(--preview-border-radius)
     var(--preview-border-radius);
   box-shadow: rgba(0, 0, 0, 0.75) 0px 3px 4px,
-    rgba(0, 0, 0, 0.35) 5px 8px 3px -3px, rgba(0, 0, 0, 0.45) 0px -2px 0px inset;
+    rgba(0, 0, 0, 0.35) 5px 8px 3px -3px, rgba(0, 0, 0, 0.45) 0px -2px 0px inset,
+    rgba(255, 255, 255, 0.3) 2px 5px 3px -3px inset;
 }
-.preview-header::before,
+/* .preview-header::before,
 .preview-header::after {
   content: "";
   position: absolute;
@@ -41,7 +43,7 @@
   right: calc(var(--preview-border-radius) * -2);
   border-top-left-radius: var(--preview-border-radius);
   box-shadow: calc(var(--preview-border-radius) * -1) 0 0 0 hsl(225, 7.5%, 5%);
-}
+} */
 
 /*  */
 
@@ -58,6 +60,9 @@
   outline: 0px solid transparent;
   outline-offset: 0px;
   box-shadow: 0 0 0 0 #ea81af;
+}
+.preview-return-button * {
+  pointer-events: none;
 }
 .preview-return-button img {
   width: 25px;
@@ -154,6 +159,9 @@
   outline-offset: 0px;
   box-shadow: 0 0 0 0 #ea81af;
 }
+.preview-fullscreen-button * {
+  pointer-events: none;
+}
 .preview-fullscreen-button > div {
   display: flex;
   width: 25px;
@@ -215,16 +223,16 @@
   align-items: center;
   cursor: pointer;
   /* dynamic */
-  top: 0%;
-  translate: 0% 0%;
-  filter: blur(8px) brightness(0.9);
-  opacity: 0.75;
+  filter: blur(3px) brightness(0.9);
   padding: 0px 5%;
   transition: top 0.1s cubic-bezier(0.645, 0.045, 0.355, 1),
     translate 0.1s cubic-bezier(0.645, 0.045, 0.355, 1),
     filter 0.3s cubic-bezier(0.645, 0.045, 0.355, 1),
     opacity 0.3s cubic-bezier(0.645, 0.045, 0.355, 1),
     padding 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+.preview-images > div * {
+  pointer-events: none;
 }
 .preview-images > div:first-child {
   right: 90%;
@@ -248,8 +256,6 @@
     box-shadow 0.1s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 .preview-images > div:hover {
-  top: 50%;
-  translate: 0% -50%;
   filter: blur(0px) brightness(1.05);
   opacity: 1;
   padding: 0px;
